<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.prueba.inmobiliariaretrofit.ui.home.HomeFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.prueba.inmobiliariaretrofit.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_inmueble"
        android:name="com.prueba.inmobiliariaretrofit.ui.inmuebles.InmueblesFragment"
        android:label="@string/inmueble"
        tools:layout="@layout/fragment_inmuebles" />

    <fragment
        android:id="@+id/nav_inquilino"
        android:name="com.prueba.inmobiliariaretrofit.ui.inquilino.InquilinoFragment"
        android:label="@string/inquilino"
        tools:layout="@layout/fragment_inquilino" />

    <fragment
        android:id="@+id/nav_contrato"
        android:name="com.prueba.inmobiliariaretrofit.ui.contrato.ContratoFragment"
        android:label="@string/contrato"
        tools:layout="@layout/fragment_contrato" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.prueba.inmobiliariaretrofit.ui.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
</navigation>